--- a/store/blocks/header/header.jsonc
+++ b/store/blocks/header/header.jsonc
@@ -77,7 +77,9 @@
   "flex-layout.row#mobile": {
     "children": [
       "drawer",
+      "flex-layout.col#spacer",
       "flex-layout.col#logo",
+      "flex-layout.col#spacer",
       "minicart.v2"
     ],
     "props": {
@@ -88,7 +90,9 @@
     }
   },
   "drawer": {
-    "children": []
+    "children": [
+      
+    ]
   },
   "flex-layout.col#logo":{
     "children":[
